--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,9 +9,13 @@ phases:
       - echo Logging in to Amazon ECR...
       - export REPOSITORY_URI="public.ecr.aws/h5s4y9s3/reinvent2022dop319"
       - aws --version
+      - sudo mkdir /usr/local/awscliv2
       - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      - unzip awscliv2.zip
-      - sudo ./aws/install
+      - unzip -q awscliv2.zip
+      - >
+        sudo ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/awscliv2 --update
+      - export PATH="/usr/local/bin:$PATH"
+#      - sudo ./aws/install
       - aws --version
       - curl -LO https://storage.googleapis.com/kubernetes-release/release/1.22/bin/linux/amd64/kubectl
       - chmod +x kubectl
