--- a/buildspec.yml
+++ b/buildspec.yml
@@ -33,12 +33,18 @@ phases:
       - echo Pushing the docker images...
       - docker push $REPOSITORY_URI:$TAG
       - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
+      - echo $CREDENTIALS
       - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
+      - echo $AWS_ACCESS_KEY_ID
       - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
+      - echo $AWS_SECRET_ACCESS_KEY
       - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
+      - echo $AWS_SESSION_TOKEN
       - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+      - echo $AWS_EXPIRATION
       - kubectl apply -f nginx-deploy.yaml
-      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME --region "us-east-2"
+      - aws eks update-kubeconfig --name "reinvent2022-east-2" --region "us-east-2"
+      - cat ~/.kube/config
       - printf '[{"name":"nginx-deploy","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files:
