--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,6 +18,7 @@ phases:
       - chmod +x kubectl
       - mv ./kubectl /usr/local/bin/kubectl
       - sudo chmod +x /usr/local/bin/kubectl
+      - rm -rf ~/.aws/credentials
       - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPOSITORY_URI
       - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
       - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' nginx-deploy.yaml
@@ -32,19 +33,19 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the docker images...
       - docker push $REPOSITORY_URI:$TAG
-      - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
-      - echo $CREDENTIALS
-      - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
-      - echo $AWS_ACCESS_KEY_ID
-      - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
-      - echo $AWS_SECRET_ACCESS_KEY
-      - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
-      - echo $AWS_SESSION_TOKEN
-      - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
-      - echo $AWS_EXPIRATION
-      - kubectl apply -f nginx-deploy.yaml
+        #      - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
+        #      - echo $CREDENTIALS
+        #      - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
+        #      - echo $AWS_ACCESS_KEY_ID
+        #      - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
+        #      - echo $AWS_SECRET_ACCESS_KEY
+        #      - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
+        #      - echo $AWS_SESSION_TOKEN
+        #      - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+        #      - echo $AWS_EXPIRATION
       - aws eks update-kubeconfig --name "reinvent2022-east-2" --region "us-east-2"
       - cat ~/.kube/config
+      - kubectl apply -f nginx-deploy.yaml
       - printf '[{"name":"nginx-deploy","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files:
