--- a/buildspec.yml
+++ b/buildspec.yml
@@ -38,10 +38,10 @@ phases:
       - docker push $REPOSITORY_URI:$TAG
       - aws sts get-caller-identity 
       - aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900
-      - aws eks update-kubeconfig --name "reinvent2022-east-2" --region "us-east-2" --role-arn $EKS_KUBECTL_ROLE_ARN
+      - aws eks update-kubeconfig --name "reinvent2022-east-2" --region "us-east-2"
       - cat ~/.kube/config
-      - kubectl get nodes
       - rm -rf ~/.aws/credentials
+      - kubectl get nodes
       - kubectl apply -f ./nginx-deploy.yaml
       - printf '[{"name":"nginx-deploy","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
