--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,50 +1,30 @@
-# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
-# SPDX-License-Identifier: MIT-0
-
+---
 version: 0.2
-
 phases:
-  pre_build:
+  install:
     commands:
-      - echo Logging in to Amazon ECR...
-      - export REPOSITORY_URI="public.ecr.aws/h5s4y9s3/reinvent2022dop319"
-      - sudo mkdir /usr/local/awscliv2
-      - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-      - unzip -q awscliv2.zip
-      - >
-        sudo ./aws/install --bin-dir /usr/local/bin --install-dir /usr/local/awscliv2 --update
-      - export PATH="/usr/local/bin:$PATH"
-      - curl -LO https://storage.googleapis.com/kubernetes-release/release/v1.22.0/bin/linux/amd64/kubectl
-      - chmod +x kubectl
-      - mv ./kubectl /usr/local/bin/kubectl
-      - sudo chmod +x /usr/local/bin/kubectl
-      - rm -rf ~/.aws/credentials
-      - curl -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator
-      - chmod +x ./aws-iam-authenticator
-      - mkdir -p ~/bin && cp ./aws-iam-authenticator ~/bin/aws-iam-authenticator && export PATH=~/bin:$PATH
-      - aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin $REPOSITORY_URI
-      - TAG="$REPOSITORY_NAME.$REPOSITORY_BRANCH.$ENVIRONMENT_NAME.$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-      - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' nginx-deploy.yaml
-        #      - export KUBECONFIG=$HOME/.kube/config
+      - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
+      - curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.14.6/2019-08-22/bin/linux/amd64/kubectl
+      - chmod +x ./kubectl ./aws-iam-authenticator
+      - export PATH=$PWD/:$PATH
+      - apt-get update && apt-get -y install jq python3-pip python3-dev && pip3 install --upgrade awscli
+  pre_build:
+      commands:
+        - export KUBECONFIG=$HOME/.kube/config
   build:
     commands:
-      - echo Docker build and tagging started on `date`
-      - docker build --tag $REPOSITORY_URI:$TAG .
-      - echo Docker build and tagging completed on `date`
+      #      - docker build --tag $REPOSITORY_URI:$TAG .
+
   post_build:
     commands:
-      - echo Build completed on `date`
-      - echo Pushing the docker images...
-      - docker push $REPOSITORY_URI:$TAG
-      - aws sts get-caller-identity 
-      - aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900
-      - aws eks update-kubeconfig --name "reinvent2022-east-2" --region "us-east-2"
-      - cat ~/.kube/config
-      - rm -rf ~/.aws/credentials
+#      - docker push $REPOSITORY_URI:$TAG
+      - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
+      - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
+      - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
+      - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
+      - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
       - kubectl get nodes
-      - kubectl apply -f ./nginx-deploy.yaml
-      - printf '[{"name":"nginx-deploy","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
+      - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
-  files:
-    - "appspec.yaml"
-    - "taskdef.json"
+  files: build.json
