--- a/buildspec.yml
+++ b/buildspec.yml
@@ -36,9 +36,16 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the docker images...
       - docker push $REPOSITORY_URI:$TAG
-      - aws eks update-kubeconfig --name "reinvent2022-east-2" --region "us-east-2"
-      - cat ~/.kube/config
-      - rm -rf ~/.aws/credentials
+      - echo "Setting Environment Variables related to AWS CLI for Kube Config Setup"
+      - CREDENTIALS=$(aws sts assume-role --role-arn $EKS_KUBECTL_ROLE_ARN --role-session-name codebuild-kubectl --duration-seconds 900)
+      - export AWS_ACCESS_KEY_ID="$(echo ${CREDENTIALS} | jq -r '.Credentials.AccessKeyId')"
+      - export AWS_SECRET_ACCESS_KEY="$(echo ${CREDENTIALS} | jq -r '.Credentials.SecretAccessKey')"
+      - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
+      - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
+      # Setup kubectl with our EKS Cluster              
+      - echo "Update Kube Config"
+      - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+        #      - aws eks update-kubeconfig --name "reinvent2022-east-2" --region "us-east-2"
       - kubectl get nodes
       - kubectl apply -f ./nginx-deploy.yaml
       - printf '[{"name":"nginx-deploy","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
