--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -46,7 +46,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
+    nginx.ingress.kubernetes.io/enable-cors: "false"
 spec:
   rules:
     - http:
