--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -47,6 +47,7 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     nginx.ingress.kubernetes.io/enable-cors: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   rules:
     - http:
