Pushing updated Manifest

--- a/deploy/deploy-nginx-ingress-target-ip.yaml
+++ b/deploy/deploy-nginx-ingress-target-ip.yaml
@@ -21,7 +21,7 @@ spec:
       terminationGracePeriodSeconds: 1
       containers:
       - name: server
-        image: public.ecr.aws/h5s4y9s3/reinvent2022con319:v1.0
+        image: public.ecr.aws/h5s4y9s3/reinvent2022dop319:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 80
