--- a/Makefile.20221121
+++ b/Makefile.20221121
@@ -1,27 +1,25 @@
-#### Variable Section
-
 REGISTRY?=public.ecr.aws/h5s4y9s3/reinvent2022dop319
-REVISION?=1
 #TAG := $(shell echo `date +%Y%m%d%H%M%S``git rev-parse HEAD | head -c 8`)
 TAG := $(shell echo `date +%Y%m%d%H%M%S`)
 LOCUSTIP := $(shell aws ec2 describe-instances --filters Name=private-dns-name,Values=`hostname -f` --query 'Reservations[*].Instances[*].PublicIpAddress' --output text)
-
-####  Help Section
 
 .PHONY: help
 help: ## Display this help.
 	@awk 'BEGIN {FS = ":.*##"; printf "\nUsage:\n  make \033[36m<target>\033[0m\n"} /^[a-zA-Z_0-9-]+:.*?##/ { printf "  \033[36m%-15s\033[0m %s\n", $$1, $$2 } /^##@/ { printf "\n\033[1m%s\033[0m\n", substr($$0, 5) } ' $(MAKEFILE_LIST)
 
-
+.PHONY: albcon
+albcon: ## Install AWS ALB Controller
+	./installALBCon.sh
+#	@echo TAG IS $(TAG)	
 
 .PHONY: docker-build
 docker-build:  ## Build Demo Application Container Image.
 	docker build -t $(REGISTRY):$(TAG) .
 
-
 .PHONY: docker-push
 docker-push: docker-build ## ECR Login and Push Container Image to $(REGISTRY):$(TAG) .
 
+	@echo TAG IS $(TAG)	
 	@aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/h5s4y9s3
 
 	docker push $(REGISTRY):$(TAG)
@@ -29,50 +27,42 @@ docker-push: docker-build ## ECR Login and Push Container Image to $(REGISTRY):$
 .PHONY: deploy
 deploy: docker-build docker-push ## Deploy Sample application to EKS Cluster
 
+	@echo TAG IS $(TAG)	
 	@cat deploy/nginx-deploy.yaml | sed "s;image: .*;image: $(REGISTRY):$(TAG);" | kubectl apply -f -
-	@echo \n
-	@kubectl get deploy/reinvent2022dop319 -o jsonpath="{..image}"
-
-.PHONY: rollout
-rollout: ## Check the Deployment revision number
-	@kubectl rollout history deployment/reinvent2022dop319
-
-.PHONY: rollback
-rollback: ## Rollback the deployment to previous version
-	@kubectl rollout undo deployment/reinvent2022dop319 --to-revision=$(REVISION)
-
 
 .PHONY: getingress
 getingress: ## Get Deployed Ingress resource FQDN
 	@kubectl get ingress/reinvent2022dop319  -o jsonpath='{.status.loadBalancer.ingress[0].hostname}'
-	@echo \
 
-.PHONY: updateingress
 
-updateingress: ## Change Ingress Resource Target type from InstanceId to IP Address
+.PHONY: upgradeapp
+upgradeapp: docker-build docker-push ## Deploy a new version of the Application on EKS
+	
+	@echo TAG IS $(TAG)	
+	@cat deploy/upgrade-nginx.yaml | sed "s;image: .*;image: $(REGISTRY):$(TAG);" | kubectl apply -f -
+
+.PHONY: ingress-target
+
+ingress-target: ## Change Ingress Resource Target type from InstanceId to IP Address
 	
 	@echo TAG IS $(TAG)	
 	@cat deploy/deploy-nginx-ingress-target-ip.yaml | sed "s;image: .*;image: $(REGISTRY):$(TAG);" | kubectl apply -f -
 
 .PHONY: upgradetargetip
-upgradetargetip: docker-build docker-push ## Upgrade APP with Ingress Resource Target type is IP Address
+
+upgradetargetip: ## Upgrade APP with Ingress Resource Target type is IP Address
 	
 	@echo TAG IS $(TAG)	
 	@cat deploy/upgrade-nginx-ingress-target-ip.yaml | sed "s;image: .*;image: $(REGISTRY):$(TAG);" | kubectl apply -f -
-
-.PHONY: imagetag
-imagetag: ## list Puhsed image tags
-	@aws ecr-public describe-images --region us-east-1 --output json --repository-name reinvent2022dop319 --query 'sort_by(imageDetails,& imagePushedAt)[].imageTags' | jq . --raw-output
 
 .PHONY: deploy-fixed
 deploy-fixed:  ## Deploy Sample application with best Practice to ensure Zero Downtime.
 
 	@echo TAG IS $(TAG)	
 	@cat deploy/nginx-fixed-deploy.yaml | sed "s;image: .*;image: $(REGISTRY):$(TAG);" | kubectl apply -f -
-#	kubectl apply -f deploy/nginx-fixed-deploy.yaml 
 
 .PHONY: zerodowntime 
-zerodowntime: docker-build docker-push ## Upgrade Sample application with Zero Downtime.
+zerodowntime: ## Upgrade Sample application with Zero Downtime.
 
 	@echo TAG IS $(TAG)	
 	@cat deploy/nginx-fixed-deploy.yaml | sed "s;image: .*;image: $(REGISTRY):$(TAG);" | kubectl apply -f -
