--- a/imnr/upgrade-nginx-ingress-target-ip.yaml
+++ b/imnr/upgrade-nginx-ingress-target-ip.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,17 +18,13 @@ spec:
       labels:
         app: reinvent2022dop319
     spec:
+      terminationGracePeriodSeconds: 1
       containers:
       - name: server
-        image: public.ecr.aws/h5s4y9s3/reinvent2022dop319:v1.0
+        image: public.ecr.aws/h5s4y9s3/reinvent2022con319:v1.0
         imagePullPolicy: Always
         ports:
         - containerPort: 80
-        lifecycle:
-          preStop:
-            exec:
-              command: ["/bin/sh", "-c", "sleep 40"]
-      terminationGracePeriodSeconds: 80
 ---
 apiVersion: v1
 kind: Service
@@ -49,6 +46,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
 spec:
   rules:
     - http:
