--- a/deploy/deploy-nginx-ingress-target-ip.yaml
+++ b/deploy/deploy-nginx-ingress-target-ip.yaml
@@ -47,6 +47,7 @@ metadata:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
 spec:
   rules:
     - http:
