--- a/deploy/nginx-fixed-deploy.yaml
+++ b/deploy/nginx-fixed-deploy.yaml
@@ -49,6 +49,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
 spec:
   rules:
     - http:
